--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 33
 
 
     defaultConfig {
         applicationId "com.rubik.rubikinteractive.bistonapp"
         minSdkVersion 21
 
-        targetSdkVersion 31
+        targetSdkVersion 33
         versionCode 6
         versionName "6.0"
 
@@ -59,6 +59,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:20.2.4'
     implementation 'com.github.ahmedshaban1:EasySlider:1.0.0'
     androidTestImplementation 'junit:junit:4.13'
+    implementation 'com.android.volley:volley:1.2.1'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
+
