--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,7 @@ buildscript {
 
         jcenter()
         maven { url "https://maven.google.com" }
-
-
+        mavenCentral()
         google()
     }
 
@@ -17,7 +16,8 @@ buildscript {
 
         classpath 'com.android.tools.build:gradle:7.2.1'
         classpath 'com.google.gms:google-services:4.3.10'
-       //classpath 'com.android.tools.build:gradle:3.4.1'
+
+        //classpath 'com.android.tools.build:gradle:3.4.1'
        // classpath 'com.google.gms:google-services:4.2.0'
 
     }
