--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,67 +1,57 @@
 apply plugin: 'com.android.application'
-//ningun error
-android {
-    compileSdkVersion 33
 
+android {
+    namespace 'com.rubik.rubikinteractive.bistonapp'
+    compileSdkVersion 36
 
     defaultConfig {
         applicationId "com.rubik.rubikinteractive.bistonapp"
-        minSdkVersion 21
-
-        targetSdkVersion 33
+        minSdkVersion 24
+        targetSdkVersion 36
         versionCode 6
         versionName "6.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-
     }
+
     lint {
         abortOnError false
         checkReleaseBuilds false
     }
 }
 
-
 dependencies {
+    // Usa solo los .jar almacenados en /libs que realmente sigues necesitando y estén actualizados
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
 
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-// compile 'com.loopj.android:android-async-http:1.4.9'
-    implementation files('libs/android-async-http-1.4.4.jar')
-    implementation files('libs/gcm.jar')
-    implementation files('libs/gson-2.8.5.jar')
-    implementation files('libs/ShortcutBadger-1.0.jar')
-    implementation files('libs/android-viewbadger.jar')
-    implementation files('libs/google play downloader library.jar')
-    implementation files('libs/google play license library.jar')
-    implementation files('libs/google play zip library.jar')
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.android.support.constraint:constraint-layout:2.0.1'
-    implementation 'com.android.support:design:29.0.0'
-    implementation 'com.android.support:support-v4:29.0.0'
+    // Librerías modernas AndroidX
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.android.material:material:1.10.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0' // Solo si algo lo requiere, trata de migrar todo a AndroidX puro
+
+    // Librerías propias y de terceros, revisa compatibilidad
     implementation 'com.roomorama:caldroid:3.0.1'
     implementation 'com.github.sundeepk:compact-calendar-view:3.0.0'
-    implementation 'com.android.support:support-vector-drawable:29.0.0'
     implementation 'com.github.arturogutierrez:badges:1.0.5@aar'
-    implementation 'com.google.firebase:firebase-core:17.5.0'
-    implementation 'com.android.volley:volley:1.1.1'
-    implementation 'com.google.firebase:firebase-messaging:20.2.4'
     implementation 'com.github.ahmedshaban1:EasySlider:1.0.0'
-    androidTestImplementation 'junit:junit:4.13'
+
+    // Firebase y Volley, usa las versiones modernas
+    implementation 'com.google.firebase:firebase-core:21.1.1'
+    implementation 'com.google.firebase:firebase-messaging:23.3.1'
     implementation 'com.android.volley:volley:1.2.1'
 
+    // Testing
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
-
