--- a/build.gradle
+++ b/build.gradle
@@ -1,36 +1,28 @@
 ext {
-    var = '27.0.0'
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+    supportLibVersion = '27.0.0'
+}
 
 buildscript {
     repositories {
-
-        jcenter()
-        maven { url "https://maven.google.com" }
+        google() // Google primero para plugins y dependencias de Google
         mavenCentral()
-        google()
+        maven { url = "https://jitpack.io" }
     }
 
 
     dependencies {
-
         classpath 'com.android.tools.build:gradle:8.12.3'
         classpath 'com.google.gms:google-services:4.4.4'
-
         //classpath 'com.android.tools.build:gradle:3.4.1'
        // classpath 'com.google.gms:google-services:4.2.0'
-
     }
 }
 
 allprojects {
     repositories {
-
-        jcenter()
-        maven {
-            url "https://jitpack.io"
-        }
         google()
+        mavenCentral()
+        maven { url = "https://jitpack.io" }
     }
 
 
